fix background image on smaller screens

--- a/public/style.css
+++ b/public/style.css
@@ -681,4 +681,8 @@ button.active {
     border-radius: 20px;
   }
 
+  #app {
+    background-size: contain;
+  }
+
 }
